# DHS_V2

./: Accounts.cpp  Accounts.h  Arg_parser.cpp  Arg_parser.h  CMakeLists.txt  Default.h  DialogAPI.cpp  DialogAPI.h  Dialog_DTO.h  FileWatcher.cpp  FileWatcher.h  GetFilesPort.cpp  GetFilesPort.h  Logger.cpp  Logger.h  Manager_ClientData.cpp  Manager_ClientData.h  Monitoring.cpp  Monitoring.h  ProtocolsLib.c  ProtocolsLib.h  QuestionsCatalog.cpp  QuestionsCatalog.h  RelayServers.h  Session.h  SgListLib.c  SgListLib.h  SgQueue.c  SgQueue.h  TaskExecutor.cpp  TaskExecutor.h  TaskList.cpp  TaskList.h  TaskRS_GetGroups.h  Task_Base.h  Task_Connect.h  Task_Info_RS.cpp  Task_Info_RS.h  Terminal_Info_List.cpp  Terminal_Info_List.h  (+25 more)
SGP2/: SGP2.c  SGP2.h
Server_http/: ServerHttp.h  controller.h  router.h
Server_http/template/: QuestV2_old.html  questv2.html  template.html
SgDialog/: SgDialog.cpp  SgDialog.h  SgDialogLib.cpp  SgDialogLib.h
